my github page edited+

--- a/index.html
+++ b/index.html
@@ -8,17 +8,66 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+      .fstPage  {
+          background-image:url("https://lawrencecheng123.github.io/Seattle.jpg");
+          /*background-color: lightgray;*/
+          height: 700px;
+          width:100%;
+          background-size:cover;
+      }
+    </style>
 </head>
 <body>
-    <nav>
+    <nav class="blue">
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Jensosv</a>
+          <a href="#!" class="brand-logo"><i class="material-icons md-48">dashboard</i>Jensosv</a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#"><i class="material-icons">code</i></a></li>
-            <li><a href="#"><i class="material-icons">explicit</i></a></li>
+            <li><a href="#"><i class="material-icons md-36">code</i></a></li>
+            <li><a href="#"><i class="material-icons md-48">explicit</i></a></li>
+            <li><a href="#"><i class="material-icons md-36">business_center</i></a></li>
+            <li><a href="#"><i class="material-icons md-36 red-text">favorite</i></a></li>
+            <li><a href="#"><i class="material-icons md-36">help</i></a></li>
+
           </ul>
         </div>
       </nav>
+
+      <div class="container">
+        <div class="fstPage">
+          
+        </div>
+        <div class="row">
+
+          <div class="card col lg12">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="" src="img/wded.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Mr. Martínez<i class="material-icons right blue-text">info</i></span>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">¿Quien Soy?<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+
+          <div class="card col s4">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="img/ed.jpg">
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">This is a link</a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
 
     <!-- Compiled and minified JavaScript -->
