--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <nav class="indigo">
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo so">SoftDev</a>
+          <a href="#!" class="brand-logo so">SoftDev<small>sv</small></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#" class="tooltipped" data-position="bottom" data-tooltip="Code"><i class="material-icons md-36">code</i></a></li>
             <li><a href="#" class="tooltipped" data-position="bottom" data-tooltip="ED"><i class="material-icons md-48">explicit</i></a></li>
@@ -52,7 +52,7 @@
       </nav>
 
       <div class="row deepimgdiv">
-        <img src="img/wdedr.jpg" class="deepimg responsive-img" alt="img info">
+        <img src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/wdedr.jpg" class="deepimg responsive-img" alt="img info">
       </div>
 
       
@@ -77,7 +77,7 @@
           <div class="col l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="responsive-img" src="img/wded.jpg">
+                <img class="responsive-img" src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/wdedr.jpg">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">CONTACTAME<i class="material-icons right blue-text">email</i></span>
@@ -100,7 +100,7 @@
           <div class="col l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="responsive-img" src="img/ed.jpg">
+                <img class="responsive-img" src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/ed.jpg">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">CONOCEME<i class="material-icons right blue-text">info</i></span>
@@ -119,7 +119,7 @@
           <div class="col l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="responsive-img" src="img/wded.jpg">
+                <img class="responsive-img" src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/wdedr.jpg">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Mr. Martínez<i class="material-icons right blue-text">info</i></span>
