--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </nav>
 
       <div class="row deepimgdiv">
-        <img src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/wdedr.jpg" class="deepimg responsive-img" alt="img info">
+        <img src="img/wdedr.jpg" class="deepimg responsive-img" alt="img info">
       </div>
 
       
@@ -77,7 +77,7 @@
           <div class="col l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="responsive-img" src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/wdedr.jpg">
+                <img class="responsive-img" src="img/wdedr.jpg">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">CONTACTAME<i class="material-icons right blue-text">email</i></span>
@@ -100,7 +100,7 @@
           <div class="col l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="responsive-img" src="https://github.com/Jensosv/Jensosv.github.io/blob/master/img/ed.jpg">
+                <img class="responsive-img" src="img/ed.jpg">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">CONOCEME<i class="material-icons right blue-text">info</i></span>
