Grid icons fixed

--- a/index.html
+++ b/index.html
@@ -215,55 +215,55 @@
                                 <h4 class="text-center">Profesionales</h4>
                             </div>
                             <div class="row br-div Sskill-div">
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML5">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="HTML5">
                                     <i class="fab fa-html5 fa-3x logo-color-orangered"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="CSS3">
                                     <i class="fab fa-css3-alt fa-3x logo-color-blue"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="JavaScript">
                                     <i class="fab fa-js-square fa-3x logo-color-yellow"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="PHP">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="PHP">
                                     <i class="fab fa-php fa-3x logo-color-blue"></i>
                                 </div>
 
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Linux OS">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Linux OS">
                                     <i class="fab fa-linux fa-3x text-dark"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Amazon Web Services">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Amazon Web Services">
                                     <i class="fab fa-aws fa-3x text-warning"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="GIT">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="GIT">
                                     <i class="fab fa-git-alt fa-3x text-danger"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Laravel">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Laravel">
                                     <i class="fab fa-laravel fa-3x text-danger"></i>
                                 </div>
 
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Windows OS">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Windows OS">
                                     <i class="fab fa-windows fa-3x logo-color-skyblue"></i>
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="CSharp">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="CSharp">
                                     <img src="img/c-sharp-logo-2.svg" alt="C# Logo" class="Hskill-svg">
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Excel">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Excel">
                                     <img src="img/microsoft-excel-2019.svg" alt="Excel Logo" class="Hskill-svg">
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Word">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="Word">
                                     <img src="img/microsoft-word-2019.svg" alt="Word Logo" class="Hskill-svg">
                                 </div>
 
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="MySQL">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="MySQL">
                                     <img src="img/mysql-logo.svg" alt="MySQL Logo" class="Hskill-svg">
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="SQL Server">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="SQL Server">
                                     <img src="img/microsoft-sql-server-logo.svg" alt="SQL Server Logo" class="Hskill-svg">
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="JSON">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="JSON">
                                     <img src="img/json-file.svg" alt="JSON Logo" class="Hskill-svg">
                                 </div>
-                                <div class="col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="PowerPoint">
+                                <div class="col-6 col-sm-6 col-md-3 col-lg-3 text-center i-hover" data-bs-toggle="tooltip" data-bs-placement="top" title="PowerPoint">
                                     <img src="img/microsoft-powerpoint-2019.svg" alt="PowerPoint Logo" class="Hskill-svg">
                                 </div>
                             </div>
@@ -329,27 +329,27 @@
                         </div>
                        
                         <div class="row">
-                            <div class="col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
+                            <div class="col-6 col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
                                 <i class="fas fa-headphones fa-3x text-music"></i><br>
                                 <p class="text-music">Música</p>
                             </div>
-                            <div class="col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
+                            <div class="col-6 col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
                                 <i class="fas fa-laptop fa-3x text-laptop"></i><br>
                                 <p class="text-laptop">Jugar</p>
                             </div>
-                            <div class="col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
+                            <div class="col-6 col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
                                 <i class="fas fa-mobile fa-3x text-mobile"></i><br>
                                 <p class="text-mobile">Memes</p>
                             </div>
-                            <div class="col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
+                            <div class="col-6 col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
                                 <i class="fas fa-tv fa-3x text-tv"></i><br>
                                 <p class="text-tv">TV</p>
                             </div>
-                            <div class="col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
+                            <div class="col-6 col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
                                 <i class="fas fa-futbol fa-3x text-futbol"></i><br>
                                 <p class="text-futbol">Fútbol</p>
                             </div>
-                            <div class="col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
+                            <div class="col-6 col-sm-6 col-md-2 col-lg-2 text-center br-div pt-3 div-p">
                                 <i class="fas fa-book fa-3x text-book"></i><br>
                                 <p class="text-book">Leer</p>
                             </div>
